--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,14 @@
       <% if alert %>
         <div class="alert alert-danger"><%= alert %></div>
       <% end %>
+    </div>
+    <div class="pull-right">
+      <% if current_user %>
+        <%= link_to 'Log Out', logout_path %>
+      <% else %>
+        <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', signup_path %>
+      <% end %>
+    </div>
       
       <%= yield %>
   </body>
